03_Service_and_Networking/web_app_deployment_ext_ingress/static_web_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web-app-deployment
  namespace: doit-lab-06
  labels:
    k8s-app: static-web-app
    k8s-scope: gke-ws-doit-lab-06
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: static-web-app
  template:
    metadata:
      labels:
        k8s-app: static-web-app
        k8s-scope: gke-ws-doit-lab-06
    spec:
      containers:
        - name: static-web-app-c
          image: nginx:alpine
          ports:
            - name: http-80
              containerPort: 80
              protocol: TCP
