03_Service_and_Networking/web_app_deployment_ext_ingress/static_web_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-web-app-service
  namespace: doit-lab-06
  labels:
    k8s-app: static-web-app
    k8s-scope: gke-ws-doit-lab-06
spec:
  type: ClusterIP
  selector:
    k8s-app: static-web-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
