03_Service_and_Networking/web_app_deployment_ext_ingress/static_web_app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-web-app-ingress
  namespace: doit-lab-06
  labels:
    k8s-app: static-web-app
    k8s-scope: gke-ws-doit-lab-06
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: static-web-app-service
      port:
        number: 8080
